--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1,55 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "82805e1b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": [
-     "hide_input"
-    ]
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "```c\n",
-       "#include <stdio.h>\n",
-       "\n",
-       "int\tmain(void)\n",
-       "{\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(char):\", sizeof(char));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(int):\", sizeof(int));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(long):\", sizeof(long));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(void*):\", sizeof(void*));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(int**):\", sizeof(int**));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(size_t):\", sizeof(size_t));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(unsigned char):\", sizeof(unsigned char));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(unsigned int):\", sizeof(unsigned int));\n",
-       "\tprintf(\"%s %lu\\n\", \"sizeof(unsigned long):\", sizeof(unsigned long));\n",
-       "}\n",
-       "\n",
-       "```"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import Markdown, display\n",
-    "with open(r\"code/sizeoftypes.c\") as f:\n",
-    "    code = f.read()\n",
-    "display(Markdown(f\"```c\\n{code}\\n```\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d964be0b",
    "metadata": {
@@ -151,7 +102,7 @@
    "id": "f8096bf9",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -194,6 +145,18 @@
     "    return (0);\n",
     "}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e202d2db",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## 🧑‍💻 Activité code/is_word_start.md"
    ]
   },
   {
@@ -267,7 +230,7 @@
    "source": [
     "### A SAVOIR ❗\n",
     "\n",
-    "L'adresse stocker par le pointeur est augmenté de la taille du type de données pointé.  \n",
+    "L'adresse stocker par le pointeur est incrémenté de la taille du type de données pointé.  \n",
     "Voir code/sizeoftypes.c"
    ]
   },
@@ -282,7 +245,7 @@
    "source": [
     "### 2. Addition\n",
     "\n",
-    "Vous pouvez ajouter un entier à un pointeur pour le déplacer vers l'avant de ce nombre d'éléments.\n",
+    "Quand vous ajouter un nombre à un pointeur il se déplace de ce nombre multiplié par la taille du type de données pointé.    \n",
     "\n",
     "```c\n",
     "#include <stdio.h>\n",
@@ -356,14 +319,85 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa1c0002",
-   "metadata": {},
+   "id": "70ea1083",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# type casting\n",
+    "# Les types en C 🐈"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ff9184b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "En C, un **type** définit comment les valeurs en mémoire sont :\n",
+    "\n",
+    "* **Interprétés**\n",
+    "* **Accédés**\n",
+    "* **Manipulés**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd496a3d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 🔍 Ce que fait un type en C :\n",
+    "\n",
+    "* **Interprétation des données binaires**\n",
+    "  `double`, `int`, `char` interprètent les mêmes bits différemment (par exemple, représentation flottante vs entière).\n",
+    "\n",
+    "* **Taille et alignement**\n",
+    "  Indique au compilateur combien d'octets lire/écrire et comment aligner les données.\n",
+    "\n",
+    "* **Arithmétique des pointeurs**\n",
+    "  `ptr + 1` signifie des choses différentes pour `int*` vs `double*` (par exemple, +4 vs +8 octets).\n",
+    "\n",
+    "* **Signatures de fonctions**\n",
+    "  Le type définit comment les arguments sont passés et traités. Et qu'est ce qui est return.\n",
+    "\n",
+    "* **Sécurité des types (faiblement appliquée en C)**\n",
+    "  Aide le compilateur à détecter des incompatibilités évidentes (bien que facilement contournables avec des casts)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa1c0002",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### type casting\n",
     "\n",
     "▶️ voir code/ptr_cast.c\n",
     "\n",
     "🔄 Le type casting est la conversion d'une variable d'un type à un autre."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16273c3c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## 🧑‍💻 Activité code/how_many_int.md"
    ]
   },
   {
@@ -411,7 +445,7 @@
    "id": "9b82635d",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -427,7 +461,11 @@
   {
    "cell_type": "markdown",
    "id": "427095a4",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "#### 💡Comme ta fonction main est return seulement à la fin, toute les variables initialisés dans le main reste disponible"
    ]
@@ -441,7 +479,7 @@
     }
    },
    "source": [
-    "### Très bonne vidéo explicative en anglais 🥇\n",
+    "### Très bonne vidéo explicative de la stack en anglais 🥇\n",
     "\n",
     "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/N3o5yHYLviQ?si=zdaWaPvSZktrjChK\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
@@ -456,6 +494,18 @@
    },
    "source": [
     "## Visualise la stack et la heap de ton code avec [pythontutor](https://pythontutor.com/visualize.html#code=void%20%20uppercase_it%28char%20*str%29%0A%7B%0A%20%20while%20%28*str%29%0A%20%20%7B%0A%20%20%20%20if%20%28*str%20%3E%3D%20'a'%20%26%26%20*str%20%3C%3D%20'z'%29%0A%20%20%20%20%20%20*str%20%2B%3D%20'A'%20-%20'a'%3B%0A%20%20%20%20str%2B%2B%3B%0A%20%20%7D%0A%7D%0A%0Avoid%20%20foo%28char%20*str%29%0A%7B%0A%20%20str%20%3D%20str%20%2B%2069%3B%0A%7D%0A%0Aint%20main%28void%29%20%0A%7B%0A%20%20char%20%20%20%20%20%20%20%20*arr%3B%0A%20%20const%20char%20%20*blabla%20%3D%20%22hello%20world%22%3B%0A%20%20%0A%20%20arr%20%3D%20malloc%283%29%3B%0A%20%20foo%28arr%29%3B%0A%20%20arr%5B2%5D%20%3D%200%3B%0A%20%20arr%5B0%5D%20%3D%20'a'%3B%0A%20%20arr%5B1%5D%20%3D%20'b'%3B%0A%20%20uppercase_it%28arr%29%3B%0A%20%20write%281,%20blabla,%205%29%3B%0A%20%20free%28arr%29%3B%0A%20%20return%200%3B%0A%7D&cumulative=false&heapPrimitives=nevernest&mode=edit&origin=opt-frontend.js&py=c_gcc9.3.0&rawInputLstJSON=%5B%5D&textReferences=false) ! ✨"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9215a48",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 🧑‍💻 Activité code/next_word.md sur pythontutor"
    ]
   },
   {
